@@ -2,11 +2,5 @@ package memory
 
 // sizeClassSlotSize maps class index -> actual slot size in bytes
 var sizeClassSlotSize = []uint32{
-	/*1-154MB-35-12796MB*/ //72, 80, 96, 104, 120, 128, 144, 160, 184, 200, 240, 264, 288, 312, 368, 432, 512, 624, 824, 1064, 1400, 1728, 2224, 2952, 3992, 4992, 6408, 8024, 10152, 12744, 16352, 21216, 31568, 41608, 65504,
-	/*2-186MB-33-12883MB*/ //72, 80, 96, 104, 120, 128, 160, 200, 240, 264, 288, 352, 432, 512, 624, 824, 1064, 1400, 1728, 2224, 2952, 3992, 5464, 7152, 9248, 11976, 16088, 21320, 32664, 45480, 65272, 86960, 131040,
-	/*3-159MB-37-12829MB*/ //72, 80, 96, 104, 120, 128, 144, 160, 184, 200, 240, 264, 288, 312, 368, 432, 512, 624, 824, 1064, 1400, 1728, 2224, 2952, 3992, 4992, 6408, 8024, 10152, 12744, 16352, 21216, 29928, 41904, 57832, 86960, 131040,
-	/*4-189MB-33-12890MB*/ //72, 80, 96, 104, 120, 128, 160, 200, 240, 264, 288, 352, 432, 512, 624, 824, 1064, 1400, 1728, 2224, 2952, 3992, 5464, 7152, 9248, 11976, 16088, 21320, 32664, 45480, 65272, 86960, 262112,
-	/*5-145MB-40-12802MB*/ //72, 80, 96, 104, 120, 128, 144, 160, 184, 200, 240, 264, 288, 312, 368, 432, 512, 624, 752, 864, 1064, 1400, 1728, 2224, 2896, 3304, 4040, 4960, 6208, 7896, 9768, 11888, 15600, 20040, 24880, 32664, 45480, 65272, 86960, 262112,
-	/*6-92MB-60-12695MB*/ 72, 80, 96, 104, 112, 120, 128, 136, 152, 160, 168, 184, 200, 216, 240, 264, 288, 312, 336, 368, 392, 432, 472, 520, 592, 672, 744, 840, 936, 1032, 1144, 1296, 1456, 1720, 2040, 2392, 2832, 2968, 3456, 3992, 4616, 5352, 6024, 6872, 7976, 9216, 10664, 12592, 14888, 17744, 20472, 24272, 29032, 32728, 41640, 49512, 65304, 80240, 94904, 262112,
-	/*7-112MB-50-12732MB*/ //72, 80, 96, 104, 112, 120, 128, 136, 152, 160, 184, 200, 216, 240, 264, 288, 312, 368, 432, 512, 624, 744, 840, 1016, 1216, 1392, 1600, 1872, 2104, 2464, 2896, 3272, 3992, 4992, 5728, 6808, 8040, 9336, 10536, 12736, 16032, 20088, 24336, 29928, 34832, 41520, 49656, 65112, 86960, 131040,
+	/*50 slots up to 128KB*/ 72, 80, 96, 104, 112, 120, 128, 136, 152, 160, 184, 200, 216, 240, 264, 288, 312, 368, 432, 512, 624, 744, 840, 1016, 1216, 1392, 1600, 1872, 2104, 2464, 2896, 3272, 3992, 4992, 5728, 6808, 8040, 9336, 10536, 12736, 16032, 20088, 24336, 29928, 34832, 41520, 49656, 65112, 86960, 131040,
 }
