@@ -8,6 +8,7 @@
 * Lib/Utxo: Added HashMap defragmenting routines to allow memory usege optimizations
 * Lib/Memory: Added defragmenting routines to allow memory usege optimizations
 * Client: using defragmenting routines to lower memory usage during chain sync/rebuild (saves RAM)
+* Lib/Memory: Added parallel process support - boosted speed of UTXO rebuild, making UseGoHeap obsolete
 
 1.11.0 - 2025-11-13:
 * Big refactoring all over the codebase; improvements, new features, all kind of cleanups
